implementing swagger final
